--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Portfolio" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/fa62c117c7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/styles.css" />
   <title>{{ title }}</title>
@@ -45,9 +45,8 @@
   </header>
   {% block content %} {% endblock %}
   <footer class="footer">
-    <p></p>
+    <p><i aria-hidden="true" class="fab fa-python"></i> & <i aria-hidden="true" class="fas fa-heart"></i></p>
   </footer>
-
   <div class="scroll-container">
     <div class="scroll-top">
       <a aria-label="Scroll up" href="#top">
