--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <h1>Hi I'm <span class="about__name">Ashwin.</span></h1>
       <h2 class="about__role">Software Developer/Student</h2>
       <p class="about__desc">
-        
+        I'm Ashwin 
       </p>
 
       <div class="about__contact center">
