Clean up website

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<section id="about__page">
-    
+<section id="about" class="section about">
+    <h2 class="section__title">ASHWIN, WHO?</h2>
+    <div class="about__content">
+        <div class="div__right"><img class="rounded" src="/static/logo.png" alt="A portrait of Ashwin Charathsandran"></div>
+        <div 
+        class="div__left">Hello I'm Ashwin I have had an endless appetite for learning and exploring the past few months. I have learned five different frameworks/libraries in the past six months due to COVID-19 being a catalyst as I spend the majority of time at home. I tend to prefer educating myself via online resources than learning traditionally in a classroom. There is no progress rate. You take your time with specific topics. You also apply it yourself to gain a greater understanding of the concept. In general, science is my field; practically anything within science interests me, from Chemistry to Physics (except Biology). Technology particularly sparked my interest because of taking your ideas, planning them out, and implementing them to create something that can help without any extra physical resources apart from your machine.
+        <br><br>
+        Working out and learning new essential skills such as handiwork, cooking, music, fitness, dieting is something I do daily. Developing skills takes a significant amount of time and effort and requires much willpower. I have only recently started to understand wellness and staying in shape after a year of practice and experience. I am very patient when learning a new skill or concept because it is similar to learning new languages and frameworks.
+        <br><br>
+        I'm also very interested in the study of Philosophy and Psychology, as they discuss questions regarding an individual, and you can genuinely understand yourself. It tackles thoughtful questions about ourselves and helps individuals understand more about their minds and behavior. Understanding these two fields can give an individual a rough idea of dealing with stress, depression, and other complicated topics. I currently read e-books and listen to podcasts on Psychology during my free time. Several podcasts touch on the subject of Psychology, so there is an extensive range of choices. </div>
+    </div>
 </section>
-{% endblock %}
+{% endblock %} 
