--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,10 @@
           <a class="link link--nav" href="/projects">Projects</a>
         </li>
         <li class="nav__list-item">
-          <a class="link link--nav" href="/skills">About</a>
+          <a class="link link--nav" href="/about">About</a>
         </li>
         <li class="nav__list-item">
-          <a class="link link--nav" href="/contact">Contact</a>
+          <a class="link link--nav" href="mailto:ashwincharath@gmai.com">Contact</a>
         </li>
       </ul>
 
