--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <h1>Hi I'm <span class="about__name">Ashwin.</span></h1>
       <h2 class="about__role">Software Developer/Student</h2>
       <p class="about__desc">
-        I'm Ashwin 
+        Expressing my undying passion for technology by researching, designing, and creating applications that solve problems. From <a href="/projects#vlone">stopping hackers</a> to predicting <a href="/projects#stockbot">stock prices</a>.  
       </p>
 
       <div class="about__contact center">
@@ -70,6 +70,12 @@
         {% endfor %}
         
       </div>
+
+      <div class="more">
+        <a href="/projects">
+          <span class="btn btn--outline">view more...</span>
+        </a>
+      </div>
     </section>
     {% endif %}
 
@@ -85,8 +91,8 @@
 
     <!-- Contact -->
     <section class="section contact center" id="contact">
-      <h2 class="section__title">Contact</h2>
-      <a href="mailto:rjshekhar.official@gmail.com">
+      <h2 class="section__title">Get in touch</h2>
+      <a href="mailto:ashwincharath@gmail.com">
         <span class="btn btn--outline">Email me</span>
       </a>
     </section>
