--- a/static/styles.css
+++ b/static/styles.css
@@ -86,8 +86,19 @@
   
   a {
     text-decoration: none;
+    color: var(--clr-primary);
   }
   
+  .disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+  }
+
+  .more {
+    margin: 1em;
+    max-width: 130px;
+  }
+
   button {
     cursor: pointer;
   }
@@ -364,6 +375,25 @@
   
   .left {
     text-align: left;
+  }
+  .about {
+    max-width: 800px;
+    margin: 0px auto;
+  }
+  .about__content {
+    display: inline-block;
+    padding: 1em;
+  }
+  /* .div__right {
+    text-align: right;
+  }
+
+  .div__left {
+    text-align: left;
+  } */
+
+  .rounded {
+    border-radius: 20px;
   }
   @media (max-width: 600px) {
     .header {
