Add README & remove junk

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,13 +58,14 @@
           {% endif %}
 
           {% if project.demo_site %}
-          <a
-            href="{{ project.demo_site}}"
+          <p>coming soon</p>
+          <!-- <a
+            href="{{ project.demo_site }}"
             aria-label="live preview"
             class="link link--icon"
           >
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-          </a>
+          </a> -->
           {% endif %}
         </div>
         {% endfor %}
