--- a/static/styles.css
+++ b/static/styles.css
@@ -376,6 +376,9 @@
   .left {
     text-align: left;
   }
+  .right {
+    text-align: right;
+  }
   .about {
     max-width: 800px;
     margin: 0px auto;
@@ -383,6 +386,11 @@
   .about__content {
     display: inline-block;
     padding: 1em;
+  }
+  .about__content img {
+    text-align: center;
+    border-radius: 50px;
+    padding: 2em;
   }
   /* .div__right {
     text-align: right;
