made some changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,15 +3,24 @@
 <section id="about" class="section about">
     <h2 class="section__title">ASHWIN, WHO?</h2>
     <div class="about__content">
-        <div class = "content">
-            <img class="rounded" src="/static/me.jpg" alt="A portrait of Ashwin Charathsandran">
-            <br>    
-            Hello I'm Ashwin, I have an endless appetite for learning and exploring everything technical related. I prefer educating myself via online resources rather than traditionally in a classroom. There is no progress rate therefore you can take your time to master topics. You can also apply it to yourself to gain a greater understanding of the concept.
-            <br><br>
-            In general, science is my field; practically anything within science interests me, especially Technology, Chemistry and Physics. Technology particularly sparked my interest because you can take your ideas, plan them about, and implement them to create something that can help without any extra physical resources apart from your machine.
-            <br><br>
-            Apart from Computer Science I have a really deep passion for strength/body training as it allows me to better myself, as it teaches me discipline and allows me to physically challenge myself as to where programming and studying challenges myself mentally.
-            <br><br>
+        <div class = "container content">
+            <div class="row">
+                <div class="col-6">
+                    <video src="/static/chem.mp4" autoplay muted loop></video>    
+                    <img src="/static/gym.jpg"></img>
+                </div>
+                <div class="col-6">
+                    <p>Hello I'm Ashwin, I have an endless appetite for learning and exploring everything technical related. I prefer educating myself via online resources rather than traditionally in a classroom. There is no progress rate therefore you can take your time to master topics. You can also apply it to yourself to gain a greater understanding of the concept.</p>
+                    <br>
+                    <br>
+                    <p>In general, science is my field; practically anything within science interests me, especially Technology, Chemistry and Physics. Technology particularly sparked my interest because you can take your ideas, plan them about, and implement them to create something that can help without any extra physical resources apart from your machine.</p>
+                    <br>
+                    <br>
+                    <p>Apart from Computer Science I have a really deep passion for strength/body training as it allows me to better myself, as it teaches me discipline and allows me to physically challenge myself as to where programming and studying challenges myself mentally.</p>
+                </div>
+            </div>
+            <div></div>
+            <br>
             <i>P.S I also love driving cars especially <a href="/static/r8.mp4">fast ones</a> :)</i>
         </div> 
     </div>
