--- a/static/styles.css
+++ b/static/styles.css
@@ -19,6 +19,10 @@
     scroll-behavior: smooth;
   }
   
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Inter", sans-serif;
+  }
+
   body {
     font-family: "Inter", sans-serif;
     line-height: 1.5;
@@ -85,6 +89,7 @@
   }
   
   a {
+    color: black;
     text-decoration: none;
     color: var(--clr-primary);
   }
@@ -379,18 +384,25 @@
   .right {
     text-align: right;
   }
+
   .about {
-    max-width: 800px;
+    /* max-width: 800px; */
     margin: 0px auto;
   }
-  .about__content {
-    display: inline-block;
-    padding: 1em;
+
+  .about__content img, video {
+    z-index: -100;
+    border-radius: 1em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2em;
+    width: 50%;
   }
-  .about__content img {
-    text-align: center;
-    border-radius: 50px;
-    padding: 2em;
+  .about__content p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   /* .div__right {
     text-align: right;
@@ -404,6 +416,9 @@
     border-radius: 20px;
   }
   @media (max-width: 600px) {
+    .about__content img, video {
+      width: 100%;
+    }
     .header {
       height: 6em;
     }
@@ -426,6 +441,7 @@
     }
   
     .display-nav-list {
+      z-index: 100;
       width: 100%;
     }
   
