--- a/static/styles.css
+++ b/static/styles.css
@@ -381,6 +381,7 @@
   .left {
     text-align: left;
   }
+
   .right {
     text-align: right;
   }
@@ -393,28 +394,37 @@
   .about__content img, video {
     z-index: -100;
     border-radius: 1em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2em;
-    width: 50%;
+    display: inline-block;
+    margin-bottom: 2em; margin: 1em;
+    max-width: 300px;
   }
+  
+  .about__content h3 {
+    margin-bottom: 30px;
+  }
+
   .about__content p {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  /* .div__right {
-    text-align: right;
+
+  .f-right {
+    float: right;
   }
 
-  .div__left {
-    text-align: left;
-  } */
+  .f-left {
+    float: left;
+  }
 
   .rounded {
     border-radius: 20px;
   }
+
+  .about__content p {
+    margin-bottom: 20px;
+  }
+
   @media (max-width: 600px) {
     .about__content img, video {
       width: 100%;
