--- a/templates/about.html
+++ b/templates/about.html
@@ -6,28 +6,41 @@
         <div class = "container content">
             <div class="row">
                 <div class="col-6">
-                    <video class="f-right" src="/static/chem.mp4" autoplay muted loop></video>    
+                    <img class="f-right" src="/static/meagain.jpg" alt="A portait of myself">    
                 </div>
                 <div class="col-6">
                     <h3><b>Hello to whoever is reading this,</b></h3>
                     <p>I'm Ashwin a Vancouver-based student and software developer who's into tinkering with, and reverse engineering programs and websites for fun. I also frequently write and create projects that solve the first-world problems that I face on a daily basis, such as tracking mileage and predicting stocks (even easy tasks like file renaming, because I'm lazy).</p>
                     <p>I've spent half of my life living in Sri-Lanka (a place you may not have heard of) a little island that rests under India, surrounded by the Indian Ocean. Around 2010, just after the Olympics finished me and my family moved to Canada in pursuit of greater oppurtunities that were not avaiable in Sri-Lanka.</p>
+                    </div>
+            </div>
+            <!-- Row 2 -->
+            <div class="row">
+                <div class="col-6">
                     <p>I remeber vividly the first piece of computer science related project I created; it was grade 4, our goal was to draw an elephant was using an old program called 'POGO' to define circles, and other shapes. This was so intriguing to me, the concept of creating something without any physical resources and virtually. This was the spark, and my introduction to Technology.</p>
+                </div>
+                <div class="col-6">
+                    <img class="f-left" src="/static/first_elephant_example.png" alt="A rough depection of the first computer science related project">
+                </div>
+            </div>
+            <!-- Row 3 -->
+            <div class="row">
+                <div class="col-6"> 
+                    <video class="f-right" src="/static/chem.mp4" autoplay muted loop></video>    
+                </div>
+                <div class="col-6">
                     <p>Since then I have had an endless appetite for learning and exploring everything technical related aiming to work in the feild of Computer Science. Latley I've been in denial of traditional teaching traditions and rather use books, and online resources to educate myself on a topic. There is no progress rate therefore you can take your time to master topics, but I lack the time required to fully master certain topics. Since I was 15 I have been learning and coding every month or so, I have learnt multiple programming languages, as well as a second language (Tamil).</p>
                     <p>In general, science is my field; practically anything within science interests me, especially Technology, Chemistry and Physics. I tend to read and watch a lot videos around scientific projects and discoveries and each time I'm amazed and blown away by the progress (you can view my collection here). Technology particularly sparked my interest because you can take your ideas design, plan, and implement them to create something that may be of help to someone without any extra physical resources apart from your machine.</p>
-                    <p>I have a deep intrest in </p>
-                    <p>Apart from Computer Science I have a really deep passion for strength/body training as it allows me to better myself, as it teaches me discipline and allows me to physically challenge myself as to where programming and studying challenges myself mentally.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-6">
-                    <p>Hello I'm Ashwin, </p> 
+                    <p>Apart from Computer Science I have a really deep passion for strength/body training as it allows me to better myself, as it teaches me discipline and allows me to physically challenge myself as to where programming and studying challenges myself mentally.</p>
                 </div>
-                <div class="col-6"> 
-                    <img class="f-left" src="/static/gym.jpg"></img>
+                <div class="col-6">
+                    <img class="f-left" src="/static/gym.jpg" alt="An image of myself at the gym">
                 </div>
             </div>
-            <div></div>
             <br>
             <i>P.S I also love driving cars especially <a href="/static/r8.mp4">fast ones</a> :)</i>
         </div> 
