--- a/templates/project_page.html
+++ b/templates/project_page.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
 <section class="about">
-<h2 class="section__title">{{ project[0].title }} </h2>
-<div class="project__page">
-    <p class="date">Timeline: {{ project[0].date_conceived }} - {{ project[0].date_completed }} </p>
-    <p>Depencies/Uses:</p>
-    <ul>
-        {% for use in project[0].uses %}
-        <li> {{ use }} </li>
-        {% endfor %}
-    </ul>
-    <p>Author(s): {{ project[0].authors }} </p>
+<h2 class="section__title">{{ project[0].project_title }} </h2>
+<div class="page">
+        <img src="" alt="">
+        <p class="description">{{ project[0].description }}</p>
+        <ul class="project__stack">
+            {% for stack in project[0].stack %}
+            <li class="project__stack-item" style="font-size:medium;">{{ stack }}</li>
+            {% endfor %}    
+        </ul>
+        <p class="date">{{ project[0].date_conceived }} ⏩ {{ project[0].date_completed }} </p>
+        <p class="author">{{ project[0].authors }} </p>
+    <br>
+    <div class="banner">
+        <img src="{{ project[0].image_url }} " alt="">
+    </div>
+    <hr style="height:2px;border-width:0;color:gray;background-color:gray;margin-top:1em;margin-bottom:1em;">
+    <!-- Use column shit here -->
+    <span class="description_block">
+        {{ project[0].description_detailed|safe }}
+    </span>
 </div>
 </section>
 {% endblock %}
