--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,9 +1,9 @@
 {% extends 'base.html'%}
 {% block content %}
 {% if projects %}
-    <section id="projects" class="section projects">
-      <h2 class="section__title">Projects</h2>
-
+   <section id="projects" class="section projects">
+      <h2 class="section__title">A Few Projects</h2>
+      <div class="projects__grid">
         {% for project in projects %}
         <div class="project">
           <h3>{{ project.title }}</h3>
@@ -15,18 +15,17 @@
             <li class="project__stack-item">{{ stack }}</li>
             {% endfor %}
           </ul>
-          {% if project.demo_site %}
+          {% if project.project_id %}
           <a
-            href="{{ project.demo_site}}"
+            href="/projects/{{ project.project_id}}"
             aria-label="live preview"
             class="disabled link link--icon"
           >
-          (Coming Soon)
           </a>
           {% endif %}
         </div>
         {% endfor %}
-        
+      </div>
       </div>
     </section>
     {% endif %}
