--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,9 @@
           </a>
           {% endif %}
 
-          {% if project.project_id %}
+          {% if project.id %}
           <a
-            href="/projects/{{ project.project_id }}"
+            href="/projects/{{ project.id }}"
             aria-label="live preview"
             class="link link--icon"
           >
