--- a/templates/project_page.html
+++ b/templates/project_page.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <section class="about">
-<h2 class="section__title">{{ project[0].project_title }} </h2>
+<h2 class="section__title">{{ project[0].title }} </h2>
 <div class="page">
         <img src="" alt="">
         <p class="description">{{ project[0].description }}</p>
@@ -21,6 +21,7 @@
     <span class="description_block">
         {{ project[0].description_detailed|safe }}
     </span>
+    
 </div>
 </section>
 {% endblock %}
