--- a/static/styles.css
+++ b/static/styles.css
@@ -43,7 +43,7 @@ body {
   --clr-primary: #2978b5;
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-
+/* Make this more visible */
 .dark {
   --clr-bg: #23283e;
   --clr-bg-alt: #2a2f4c;
@@ -113,6 +113,10 @@ button {
   cursor: pointer;
 }
 
+.base__title {
+  font-size: 2rem;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 2.6rem;
@@ -127,6 +131,7 @@ button {
   color: var(--clr-primary);
   padding: 0 0 0.3em 0;
   position: relative;
+  transition: color 0.2s ease-in;
 }
 
 .link:hover {
@@ -141,12 +146,11 @@ button {
   position: absolute;
   bottom: 0;
   background-color: var(--clr-primary);
-  transition: width 0.2s ease-in;
 }
 
 .link:hover::before,
 .link:focus::before {
-  width: 100%;
+  /* width: 100%; */
 }
 
 .link--nav {
@@ -158,6 +162,10 @@ button {
 .link--icon {
   color: var(--clr-fg);
   font-size: 1.2rem;
+}
+
+.smaller-icons-shit {
+  font-size: 2.0rem;
 }
 
 .btn {
@@ -281,7 +289,8 @@ main {
 }
 
 .about__role {
-  margin-top: 1.2em;
+  font-size: 24px;
+  margin-top: 0.5em;
 }
 
 .about__desc {
