--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <!-- About -->
     <div class="about center">
       <h1>Hi I'm <span class="about__name">Ashwin.</span></h1>
-      <h2 class="about__role">Software Developer/Student</h2>
+      <!-- Make this smaller -->
+      <h2 class="about__role">Software Developer</h2>
       <p class="about__desc">
         Expressing my undying passion for technology by researching, designing, and creating applications that solve problems. From <a href="/projects#vlone">stopping hackers</a> to predicting <a href="/projects#stockbot">stock prices</a>.  
       </p>
@@ -14,7 +15,7 @@
         <a
           href="https://github.com/ax20"
           aria-label="github"
-          class="link link--icon"
+          class="link link--icon smaller-icons-shit"
         >
           <i aria-hidden="true" class="fab fa-github"></i>
         </a>
@@ -22,7 +23,7 @@
         <a
           href="https://linkedin.com/in/ax2"
           aria-label="linkedin"
-          class="link link--icon"
+          class="link link--icon smaller-icons-shit"
         >
           <i aria-hidden="true" class="fab fa-linkedin"></i>
         </a>
